--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.11",
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.40",
     "@types/webpack": "^4.4.27",
     "clean-webpack-plugin": "^2.0.1",
     "jest": "^24.7.1",
@@ -33,7 +35,12 @@
   "directories": {
     "lib": "lib"
   },
-  "dependencies": {},
+  "dependencies": {
+    "inversify": "^5.0.1",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "reflect-metadata": "^0.1.13"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/houssemdevs/bpnodepkg.git"
