--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bp",
-  "version": "0.0.3",
-  "description": "nodejs package using typescript",
+  "name": "koa-ioc-utils",
+  "version": "0.0.1",
+  "description": "IoC utils for koa apps that scale",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -14,7 +14,14 @@
   "files": [
     "lib/**/*"
   ],
-  "keywords": [],
+  "keywords": [
+    "koa",
+    "koa-router",
+    "ioc",
+    "inversify",
+    "metadta",
+    "reflect-metadata"
+  ],
   "author": "GHIAT Houssem",
   "license": "MIT",
   "devDependencies": {
