--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@types/jest": "^24.0.11",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.40",
+    "@types/supertest": "^2.0.7",
     "@types/webpack": "^4.4.27",
     "clean-webpack-plugin": "^2.0.1",
     "jest": "^24.7.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
