--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npx tsc",
     "predev": "npm run clean",
     "dev": "npx tsc --watch",
+    "doc": "npx typedoc --out ./docs --mode modules --readme ./README.md",
     "clean": "npx rimraf -G ./lib",
     "preversion": "npm run build && npm t",
     "postversion": "git push && git push --tags",
@@ -45,6 +46,7 @@
     "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.4.1"
   },
   "directories": {
