--- a/package.json
+++ b/package.json
@@ -37,22 +37,24 @@
   "author": "GHIAT Houssem",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/koa": "^2.0.48",
-    "@types/koa-router": "^7.0.40",
+    "@types/jest": "^24.0.17",
+    "@types/koa": "^2.0.49",
+    "@types/koa-router": "^7.0.42",
+    "@types/mime": "^2.0.1",
+    "@types/node": "^12.6.9",
     "@types/supertest": "^2.0.7",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.15.0",
+    "ts-loader": "^5.4.5",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.15.0",
-    "typescript": "^3.4.1"
+    "typescript": "^3.5.3"
   },
   "directories": {
     "lib": "lib"
@@ -61,6 +63,7 @@
     "inversify": "^5.0.1",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
+    "mime": "^2.4.4",
     "reflect-metadata": "^0.1.13"
   },
   "repository": {
